@@ -107,7 +107,7 @@ public class WalkthroughScroller {
         double maxScrollY = contentBounds.getHeight() - viewportHeight;
         double desiredScrollY = targetCenterY - (viewportHeight / 2);
 
-        double vValue = Math.max(0, Math.min(1, desiredScrollY / maxScrollY));
+        double vValue = Math.clamp(desiredScrollY / maxScrollY, 0, 1);
         scrollPane.setVvalue(vValue);
     }
 
@@ -150,7 +150,7 @@ public class WalkthroughScroller {
 
         if (itemHeight > 0) {
             double targetCenterY = targetBounds.getCenterY();
-            return (int) Math.max(0, Math.min(itemCount - 1, targetCenterY / itemHeight));
+            return (int) Math.clamp(targetCenterY / itemHeight, 0, itemCount - 1);
         }
         return -1;
     }
